add people and some photos

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -24,6 +24,7 @@
   type="text/css"
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:100,300,400,500,700|Material+Icons&display=swap"
 >
+<link href="https://fonts.googleapis.com/css?family=Barlow:400|Barlow:400&display=swap" rel="stylesheet">
 
 <!-- Code Syntax Highlighting -->
 <link
