--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,8 +8,9 @@ $red-color: #ff3636 !default;
 $red-color-dark: #b71c1c !default;
 $orange-color: #f29105 !default;
 $blue-color: #0076df !default;
+$blue-sky-color: rgba(14, 165, 233, 1) !default;
 $blue-color-dark: #00369f !default;
-$cyan-color: #2698ba !default;
+$cyan-color: rgba(34, 211, 238, 1) !default;
 $light-cyan-color: lighten($cyan-color, 25%);
 $green-color: #00ab37 !default;
 $green-color-lime: #b7d12a !default;
@@ -30,10 +31,12 @@ $grey-900: #212529;
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
+$dark-bg: rgba(15, 23, 42, 1) !default;
+
 // Theme colors
 
-$code-bg-color-light: rgba($purple-color, 0.05);
-$code-bg-color-dark: #2c3237 !default;
+$code-bg-color-light: $blue-sky-color; //rgba($purple-color, 0.05);
+$code-bg-color-dark: $dark-bg;
 
 // Font awesome location
 $fa-font-path: "../webfonts";
